added afterinstall section

--- a/manifest.json
+++ b/manifest.json
@@ -47,5 +47,9 @@
 			"discord",
 			"telegram"
 		]
-	}
+	},
+	"afterinstall": [
+		"reg import \"$dir\\install-context.reg\"",
+		"nvm install lts; nvm use lts"
+	]
 }
