used full name qualifier

--- a/manifest.json
+++ b/manifest.json
@@ -18,34 +18,34 @@
 			"versions"
 		],
 		"apps": [
-			"curl",
-			"sudo",
-			"starship",
-			"pwsh",
-			"windows-terminal",
-			"everything",
-			"everythingtoolbar",
-			"wiztree",
-			"bulk-crap-uninstaller",
-			"sharex",
-			"neovim",
-			"bruno",
-			"zeal",
-			"nvm",
-			"pyenv",
-			"dotnet-sdk",
-			"python",
-			"ffmpeg",
-			"yt-dlp",
-			"mpv",
-			"imagemagick",
+			"main/curl",
+			"main/sudo",
+			"main/starship",
+			"main/pwsh",
+			"extras/windows-terminal",
+			"extras/everything",
+			"extras/everythingtoolbar",
+			"extras/wiztree",
+			"extras/bulk-crap-uninstaller",
+			"extras/sharex",
+			"extras/neovim",
+			"extras/bruno",
+			"extras/zeal",
+			"main/nvm",
+			"main/pyenv",
+			"main/dotnet-sdk",
+			"main/python",
+			"main/ffmpeg",
+			"main/yt-dlp",
+			"main/mpv",
+			"main/imagemagick",
 			"nerd-fonts/JetBrainsMono-NF",
-			"googlechrome",
-			"ungoogled-chromium",
-			"zen-browser",
-			"bitwarden",
-			"discord",
-			"telegram"
+			"extras/googlechrome",
+			"extras/ungoogled-chromium",
+			"versions/zen-browser",
+			"extras/bitwarden",
+			"extras/discord",
+			"extras/telegram"
 		]
 	},
 	"afterinstall": [
